--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -8,6 +8,16 @@
   set_fact:
       zabbix_short_version: "{{ zabbix_version | regex_replace('\\.', '') }}"
 
+- name: "Debian | Installing lsb support"
+  apt: pkg=lsb-release
+       state=present
+  when: ansible_distribution == "Debian" and zabbix_repo == "zabbix"
+  become: yes
+  tags:
+    - zabbix-agent
+    - init
+    - repository
+
 - name: "Debian | Installing deb repository Debian"
   apt_repository: repo="deb http://repo.zabbix.com/zabbix/{{ zabbix_version }}/debian/ {{ ansible_lsb.codename }} main"
                   state=present
