--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -9,9 +9,12 @@
       zabbix_short_version: "{{ zabbix_version | regex_replace('\\.', '') }}"
 
 - name: "Debian | Installing lsb support"
-  apt: pkg=lsb-release
+  apt: pkg={{ item }}
        state=present
   when: ansible_distribution == "Debian" and zabbix_repo == "zabbix"
+  with_items:
+  - lsb-release
+  - lsb-base
   become: yes
   tags:
     - zabbix-agent
